# devtest

./: Dockerfile  README.md  pyproject.toml
devtest/: main.py
devtest/templates/: index.html  news.html
tickets/: 0000-example  0111-odd-issue  0291-good-news  0292-rm22-issue  0292-rm24-issue  0322-refactor  0442-api-down
