[tool.poetry]
name = "devtest"
version = "0.1.0"
description = ""
authors = ["Skylar Kelty <skylar.kelty@kcl.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
